<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/button_help_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@mipmap/ic_arrow_left_white_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/help_title"
            android:textColor="#FFF"
            android:textSize="22sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_help_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shadow"
                android:hint="@string/help_name"
                android:maxLength="30"
                android:inputType="text"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/edit_text_help_number"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/shadow"
                android:hint="@string/help_number"
                android:maxLength="30"
                android:inputType="phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_help_theme"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:maxLength="30"
                android:background="@drawable/shadow"
                android:hint="@string/help_theme"
                android:inputType="text"
                android:textSize="18sp" />

            <FrameLayout
                android:id="@+id/button_help_description"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/shadow">

                <TextView
                    android:id="@+id/edit_text_help_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_description"
                    android:layout_gravity="center_vertical|left"
                    android:textColor="@color/colorText"
                    android:layout_marginRight="50dp"
                    android:textSize="18sp" />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|center_vertical"
                    android:background="@mipmap/ic_chevron_right_black_24dp"/>
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/button_help_send"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal|bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@drawable/button">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLength="20"
                android:text="@string/help_send"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </FrameLayout>

    </FrameLayout>

</LinearLayout>